<resources>
    <string name="app_name">DSM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_write">작성하기</string>
    <string name="nav_desclogin">로그인을 하시면 더 많은 기능을 사용하실 수 있습니다.</string>
    <string name="nav_login">로그인</string>
    <string name="nav_logout">로그아웃</string>
    <string name="nav_home">홈</string>
    <string name="nav_apply">신청</string>
    <string name="nav_extensionapply">연장신청</string>
    <string name="nav_stayapply">잔류신청</string>
    <string name="nav_goingoutapply">외출신청</string>
    <string name="nav_rewardscoreapply">상점신청</string>
    <string name="nav_afterschoolapply">방과후신청</string>
    <string name="nav_school">학교 소식</string>
    <string name="nav_meal">급식</string>
    <string name="nav_notice">공지사항</string>
    <string name="nav_newsletter">가정통신문</string>
    <string name="nav_competition">대회정보</string>
    <string name="nav_dormitory">기숙사</string>
    <string name="nav_facilityreport">시설고장신고</string>
    <string name="nav_rule">기숙사규정</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_qna">문의하기</string>
    <string name="nav_mypage">마이페이지</string>
    <string name="nav_settings">설정</string>
    <string name="http_bad_request">잘못된 요청입니다.</string>
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login_remember">Remember me</string>
    <string name="login_login">로그인</string>
    <string name="login_register">아이디가 없으신가요? 지금 회원가입하세요.</string>
    <string name="login_noid">아이디를 입력하세요.</string>
    <string name="login_nopassword">비밀번호를 입력하세요.</string>
    <string name="login_created">님, 환영합니다.</string>
    <string name="login_bad_request">아이디 또는 비밀번호를 잘못 입력하셨습니다.</string>
    <string name="login_internal_server_error">오류로 인해 로그인에 실패하였습니다.</string>
    <string name="logout_success">로그아웃하였습니다.</string>
    <string name="register_uid">가입코드</string>
    <string name="register_id">아이디</string>
    <string name="register_password">비밀번호</string>
    <string name="register_name">이름</string>
    <string name="register_number">학번</string>
    <string name="register_sex">성별</string>
    <string name="register_register">가입하기</string>
    <string name="register_nouid">가입코드를 입력하세요.</string>
    <string name="register_noid">아이디를 입력하세요.</string>
    <string name="register_nopassword">비밀번호를 입력하세요.</string>
    <string name="register_created">회원가입이 완료되었습니다.</string>
    <string name="register_conflict">아이디가 이미 존재합니다.</string>
    <string name="register_failure">회원가입에 실패했습니다.</string>
    <string name="register_internal_server_error">오류로 인해 회원가입에 실패했습니다.</string>
    <string name="extensionapply_load_failure">자리를 불러오지 못했습니다.</string>
    <string name="extensionapply_load_internal_server_error">오류로 인해 자리를 불러오지 못했습니다.</string>
    <string name="extensionapply_draw_error">자리를 그리지 못했습니다.</string>
    <string name="extensionapply_apply_created">신청이 완료되었습니다.</string>
    <string name="extensionapply_apply_no_content">신청 가능한 시간이 아닙니다.</string>
    <string name="extensionapply_apply_internal_server_error">오류로 인해 신청에 실패했습니다.</string>
    <string name="stayapply_defaultstatus">기본값</string>
    <string name="stayapply_changedefaultstatus">변경</string>
    <string name="stayapply_fridaygo">금요귀가</string>
    <string name="stayapply_saturdaygo">토요귀가</string>
    <string name="stayapply_saturdaycome">토요귀사</string>
    <string name="stayapply_stay">잔류</string>
    <string name="stayapply_apply">신청하기</string>
    <string name="stayapply_nochecked">값을 선택해주세요.</string>
    <string name="stayapply_internal_server_error">오류로 인해 잔류상태 정보를 불러오지 못했습니다.</string>
    <string name="stayapply_default_no_content">오류로 인해 잔류상태 기본값 정보를 불러오지 못했습니다.</string>
    <string name="stayapply_default_internal_server_error">오류로 인해 잔류상태 기본값 정보를 불러오지 못했습니다.</string>
    <string name="stayapply_dialog_title">기본값 변경</string>
    <string name="stayapply_dialog_negative">취소</string>
    <string name="stayapply_dialog_positive">변경</string>
    <string name="stayapply_default_load_ok">기본값을 변경하였습니다.</string>
    <string name="stayapply_default_load_error">오류로 인해 기본값을 변경하지 못했습니다.</string>
    <string name="stayapply_apply_ok">잔류상태를 변경하였습니다.</string>
    <string name="stayapply_apply_no_content">잔류상태를 변경하지 못했습니다.</string>
    <string name="stayapply_apply_internal_server_error">오류로 인해 잔류상태를 변경하지 못했습니다.</string>
    <string name="goingoutapply_applystatus">신청한 요일</string>
    <string name="goingoutapply_load_no_content">신청 정보가 없습니다.</string>
    <string name="goingoutapply_load_internal_server_error">오류로 인해 신청 상태를 불러오지 못했습니다.</string>
    <string name="goingoutapply_saturday">토요일</string>
    <string name="goingoutapply_sunday">일요일</string>
    <string name="goingoutapply_reason">이유</string>
    <string name="goingoutapply_desc">앱에서 외출신청 후, 별도로 사감실에 방문하여 확인받아야 합니다.</string>
    <string name="goingoutapply_hint">이유를 작성해주세요.</string>
    <string name="goingoutapply_subdesc">(중복 선택 가능)</string>
    <string name="goingoutapply_apply">신청하기</string>
    <string name="goingoutapply_nochecked">값을 선택해주세요.</string>
    <string name="goingoutapply_apply_ok">신청이 완료되었습니다.</string>
    <string name="goingoutapply_apply_internal_server_error">오류로 인해 신청에 실패했습니다.</string>
    <string name="rewardscoreapply_rewardscore">상점</string>
    <string name="rewardscoreapply_recommend">추천</string>
    <string name="rewardscoreapply_content">내용</string>
    <string name="rewardscoreapply_recommendee">추천인</string>
    <string name="rewardscoreapply_apply">신청하기</string>
    <string name="rewardscoreapply_nocontent">내용을 입력해주세요.</string>
    <string name="rewardscoreapply_norecommendee">추천인을 입력해주세요.</string>
    <string name="rewardscoreapply_description_morningexercise_title">아침운동 상점</string>
    <string name="rewardscoreapply_description_morningexercise_content">3점: 지각·열외·불참 없으며 모범적으로 참여 / 2점: 지각·열외·불참 없음 / 1점: 지각·열외·불참 1회 이하</string>
    <string name="rewardscoreapply_description_cleanroom_title">청결점호 상점</string>
    <string name="rewardscoreapply_description_cleanroom_content">2점: 해당 월 청결호실 점검 X표 누적 2회 이하인 학생</string>
    <string name="rewardscoreapply_description_modelstudent_title">모범학생 상점(월별)</string>
    <string name="rewardscoreapply_description_modelstudent_content">2점: 해당 월 무벌점자 중 기숙사생들의 추천 수가 높은 학년별 3명(1인당 학기별 1회까지만 부여)</string>
    <string name="rewardscoreapply_description_electronicequip_title">전자기기 사용 모범</string>
    <string name="rewardscoreapply_description_electronicequip_content">1점: 해당 월 전자기기 사용규정 위반사항이 없는 학생</string>
    <string name="rewardscoreapply_description_etc_title">기타</string>
    <string name="rewardscoreapply_description_etc_content">기숙사 생활 중 선행이나 모범행동으로 추천을 받은 경우 / 기숙사 이벤트에 모범적으로 참여하거나 수상한 경우</string>
    <string name="rewardscoreapply_created">신청이 완료되었습니다.</string>
    <string name="rewardscoreapply_internal_server_error">오류로 인해 신청에 실패했습니다.</string>
    <string name="afterschool_monday">월</string>
    <string name="afterschool_tuesday">화</string>
    <string name="afterschool_wednesday">수</string>
    <string name="afterschool_saturday">토</string>
    <string name="afterschool_grade1">1학년</string>
    <string name="afterschool_grade2">2학년</string>
    <string name="afterschool_grade3">3학년</string>
    <string name="afterschool_list_apply">신청</string>
    <string name="afterschool_list_empty">방과후신청 목록이 없습니다.</string>
    <string name="afterschool_list_error">오류로 인해 방과후신청 목록을 불러오지 못했습니다.</string>
    <string name="afterschool_apply_created">신청이 완료되었습니다.</string>
    <string name="afterschool_apply_failure">신청에 실패하였습니다.</string>
    <string name="afterschool_apply_conflict">이미 신청된 요일입니다.</string>
    <string name="afterschool_apply_internal_server_error">오류로 인해 신청에 실패했습니다.</string>
    <string name="meal_breakfast">아침</string>
    <string name="meal_lunch">점심</string>
    <string name="meal_dinner">저녁</string>
    <string name="meal_meal">급식</string>
    <string name="meal_allergy">알레르기</string>
    <string name="meal_failure">급식 정보를 불러오지 못했습니다.</string>
    <string name="meal_internal_server_error">오류로 인해 급식 정보를 불러오지 못했습니다.</string>
    <string name="appcontent_notice_empty">공지사항이 없습니다.</string>
    <string name="appcontent_newsletter_empty">가정통신문이 없습니다.</string>
    <string name="appcontent_competition_empty">대회정보가 없습니다.</string>
    <string name="appcontent_notice_important">중요</string>
    <string name="appcontent_notice_error">오류로 인해 공지사항을 불러오지 못했습니다.</string>
    <string name="appcontent_newsletter_error">오류로 인해 가정통신문을 불러오지 못했습니다.</string>
    <string name="appcontent_competition_error">오류로 인해 대회정보를 불러오지 못했습니다.</string>
    <string name="appcontent_dialog_title">첨부파일</string>
    <string name="appcontent_dialog_negative">취소</string>
    <string name="appcontent_dialog_positive">다운로드</string>
    <string name="appcontent_btn_more">더보기</string>
    <string name="appcontent_download_start">다운로드를 시작합니다.</string>
    <string name="appcontent_download_finish">다운로드가 완료되었습니다.</string>
    <string name="facilityreport_empty">신고 내역이 없습니다.</string>
    <string name="facilityreport_list_no_content">신고 내역이 없습니다.</string>
    <string name="facilityreport_title">제목</string>
    <string name="facilityreport_room">호실</string>
    <string name="facilityreport_content">고장 내용</string>
    <string name="facilityreport_submit">제출하기</string>
    <string name="facilityreport_notitle">제목을 입력해주세요.</string>
    <string name="facilityreport_noroom">호실을 입력해주세요.</string>
    <string name="facilityreport_nocontent">내용을 입력해주세요.</string>
    <string name="facilityreport_article_no_content">글이 없습니다.</string>
    <string name="facilityreport_list_internal_server_error">오류로 인해 신고 내역을 불러오지 못했습니다.</string>
    <string name="facilityreport_article_internal_server_error">오류로 인해 글을 불러오지 못했습니다.</string>
    <string name="facilityreport_write_internal_server_error">오류로 인해 신고 사항을 제출하지 못했습니다.</string>
    <string name="facilityreport_write_created">신고 사항을 제출하였습니다.</string>
    <string name="facilityreport_write_failure">신고 사항을 제출하지 못했습니다.</string>
    <string name="rule_empty">기숙사 규정이 없습니다.</string>
    <string name="rule_no_content">기숙사 규정이 없습니다.</string>
    <string name="rule_internal_server_error">오류로 인해 기숙사 규정을 불러오지 못했습니다.</string>
    <string name="faq_empty">FAQ가 없습니다.</string>
    <string name="faq_no_content">FAQ가 없습니다.</string>
    <string name="faq_internal_server_error">오류로 인해 FAQ를 불러오지 못했습니다.</string>
    <string name="qna_empty">Q<![CDATA[&]]>A가 없습니다.</string>
    <string name="qna_private">비공개 글입니다.</string>
    <string name="qna_comment">댓글</string>
    <string name="qna_answer">답변</string>
    <string name="qna_title">제목</string>
    <string name="qna_content">문의 내용</string>
    <string name="qna_privacy">비공개</string>
    <string name="qna_submit">제출하기</string>
    <string name="qna_list_no_content">Q<![CDATA[&]]>A가 없습니다.</string>
    <string name="qna_list_internal_server_error">오류로 인해 Q<![CDATA[&]]>A를 불러오지 못했습니다.</string>
    <string name="qna_article_no_content">글이 없습니다.</string>
    <string name="qna_article_internal_server_error">오류로 인해 글을 불러오지 못했습니다.</string>
    <string name="qna_write_created">문의사항을 제출하였습니다.</string>
    <string name="qna_write_internal_server_error">오류로 인해 문의사항을 제출하지 못했습니다.</string>
    <string name="comment_empty">댓글이 없습니다.</string>
    <string name="comment_load_no_content">댓글이 없습니다.</string>
    <string name="comment_load_internal_server_error">오류로 인해 댓글을 불러오지 못했습니다.</string>
    <string name="comment_upload_internal_server_error">오류로 인해 댓글을 작성하지 못했습니다.</string>
    <string name="mypage_merit">상점</string>
    <string name="mypage_demerit">벌점</string>
    <string name="mypage_total">총점</string>
    <string name="mypage_status">상태</string>
    <string name="mypage_applied">신청됨</string>
    <string name="mypage_notapplied">미신청</string>
    <string name="mypage_load_no_content">회원 정보가 없습니다.</string>
</resources>