<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dmsbtn="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_facilityreport_write_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/facilityreport_title"
        android:textColor="@android:color/black" />

    <com.dms.beinone.application.dmsview.DMSEditText
        android:id="@+id/et_facilityreport_write_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_facilityreport_write_title"
        android:textCursorDrawable="@drawable/dmset_cursor" />

    <TextView
        android:id="@+id/tv_facilityreport_write_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/et_facilityreport_write_title"
        android:text="@string/facilityreport_room"
        android:textColor="@android:color/black" />

    <com.dms.beinone.application.dmsview.DMSEditText
        android:id="@+id/et_facilityreport_write_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_facilityreport_write_room"
        android:textCursorDrawable="@drawable/dmset_cursor" />

    <TextView
        android:id="@+id/tv_facilityreport_write_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/et_facilityreport_write_room"
        android:text="@string/facilityreport_content"
        android:textColor="@android:color/black" />

    <com.dms.beinone.application.dmsview.DMSEditText
        android:id="@+id/et_facilityreport_write_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_facilityreport_write_content"
        android:lines="5"
        android:inputType="textMultiLine"
        android:textCursorDrawable="@drawable/dmset_cursor" />

    <com.dms.beinone.application.dmsview.DMSButton
        android:id="@+id/btn_facilityreport_write_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/facilityreport_submit"
        dmsbtn:style="bottom" />

</RelativeLayout>