<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:dmsbtn="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_qna_write_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/qna_title"
        android:textColor="@android:color/black" />

    <com.dms.beinone.application.views.custom.DMSEditText
        android:id="@+id/et_qna_write_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_qna_write_title"
        android:textCursorDrawable="@drawable/dmset_cursor" />

    <TextView
        android:id="@+id/tv_qna_write_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/et_qna_write_title"
        android:text="@string/qna_content"
        android:textColor="@android:color/black" />

    <com.dms.beinone.application.views.custom.DMSEditText
        android:id="@+id/et_qna_write_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_qna_write_content"
        android:lines="5"
        android:inputType="textMultiLine"
        android:textCursorDrawable="@drawable/dmset_cursor" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_qna_write_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@id/et_qna_write_content"
        android:text="@string/qna_privacy"
        app:switchMinWidth="56dp" />

    <com.dms.beinone.application.views.custom.DMSButton
        android:id="@+id/btn_qna_write_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:text="@string/qna_submit"
        dmsbtn:dmsbtn_style="rectangle"
        dmsbtn:dmsbtn_backgroundColor="@android:color/black"
        dmsbtn:dmsbtn_strokeColor="@android:color/black"
        dmsbtn:dmsbtn_touchBackgroundColor="@color/colorPrimary"
        dmsbtn:dmsbtn_touchStrokeColor="@color/colorPrimary"
        dmsbtn:dmsbtn_textColor="@android:color/white"
        dmsbtn:dmsbtn_touchTextColor="@android:color/white" />

</RelativeLayout>