<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:dmsbtn="http://schemas.android.com/apk/res-auto"
    xmlns:dmset="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_above="@+id/btn_register_register">

        <com.dms.beinone.application.dmsview.DMSEditText
            android:id="@+id/et_register_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/register_id"
            android:inputType="text"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/dmset_cursor"
            dmset:dmset_backgroundColor="@android:color/transparent"
            dmset:dmset_focusStrokeColor="@color/colorPrimary"
            dmset:dmset_strokeColor="@color/colorPrimary"
            dmset:dmset_textColor="@android:color/black" />

        <com.dms.beinone.application.dmsview.DMSEditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/dmset_cursor"
            dmset:dmset_backgroundColor="@android:color/transparent"
            dmset:dmset_focusStrokeColor="@color/colorPrimary"
            dmset:dmset_strokeColor="@color/colorPrimary"
            dmset:dmset_textColor="@android:color/black" />

        <com.dms.beinone.application.dmsview.DMSEditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_name"
            android:inputType="text"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/dmset_cursor"
            dmset:dmset_backgroundColor="@android:color/transparent"
            dmset:dmset_focusStrokeColor="@color/colorPrimary"
            dmset:dmset_strokeColor="@color/colorPrimary"
            dmset:dmset_textColor="@android:color/black" />

        <com.dms.beinone.application.dmsview.DMSEditText
            android:id="@+id/et_register_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/register_number"
            android:inputType="text"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/dmset_cursor"
            dmset:dmset_backgroundColor="@android:color/transparent"
            dmset:dmset_focusStrokeColor="@color/colorPrimary"
            dmset:dmset_strokeColor="@color/colorPrimary"
            dmset:dmset_textColor="@android:color/black" />

        <lib.kingja.switchbutton.SwitchMultiButton
            android:id="@+id/switchbtn_register_sex"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:selectedColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <com.dms.beinone.application.dmsview.DMSButton
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:text="@string/register_register"
        dmsbtn:dmsbtn_backgroundColor="@android:color/black"
        dmsbtn:dmsbtn_strokeColor="@android:color/black"
        dmsbtn:dmsbtn_style="rectangle"
        dmsbtn:dmsbtn_textColor="@android:color/white"
        dmsbtn:dmsbtn_touchBackgroundColor="@color/colorPrimary"
        dmsbtn:dmsbtn_touchStrokeColor="@color/colorPrimary"
        dmsbtn:dmsbtn_touchTextColor="@android:color/white" />

</RelativeLayout>